--- a/Hemsidan om mig/Style.css
+++ b/Hemsidan om mig/Style.css
@@ -1,24 +1,75 @@
+*{
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
+    }
+
 body {
-background-image: url(Bilder/Bakgrund1.jpeg);
+background-image: url(Bilder/Bakgrund2.jpg);
 background-size: cover;
+
+
 }
 
 nav {
-Background-color: rgb(38, 38, 38, 0.7)
+Background-color: rgb(38, 38, 38, 0.8);
+height: 80px;
+width: 100%;
+border-bottom-style: solid;
+border-bottom-width: 2px;
+border-bottom-color: coral;
+
 }
 
 nav label {
-
+    font-family: 'Montserrat', sans-serif;
+    color:white;
+    font-size:38px;
+    line-height: 80px;
+    padding: 0 100px;
+    
 }
 
 nav ul {
-
+float: right;
+margin-right: 60px;
 }
 
 nav ul li {
+display: inline-block;
+line-height: 80px;
+margin: 0 5px;
 
 }
 
 nav ul li a {
 color:white;
+font-family: 'Montserrat', sans-serif;
+font-size: 18px;
+text-transform: uppercase;
+margin-right: 20px;
+}
+
+table {
+    Background-color: rgb(38, 38, 38, 0.8);
+    width: 300px;
+    length: 600px;
+}
+
+table td {
+
+}
+
+table td tr {
+
+}
+
+table td tr h3 {
+
+}
+
+table td tr p {
+
 }
