--- a/Hemsidan om mig/Style.css
+++ b/Hemsidan om mig/Style.css
@@ -14,12 +14,12 @@ background-size: cover;
 }
 
 nav {
-Background-color: rgb(38, 38, 38, 0.8);
+Background-color: rgb(38, 38, 38);
 height: 80px;
 width: 100%;
 border-bottom-style: solid;
 border-bottom-width: 2px;
-border-bottom-color: coral;
+border-bottom-color: white;
 
 
 }
@@ -27,9 +27,11 @@ border-bottom-color: coral;
 nav label {
   font-family: 'Montserrat', sans-serif;
   color:white;
-  font-size:38px;
+  font-size:34px;
   line-height: 80px;
   padding: 0 120px;
+  letter-spacing: 5px;
+  transition: 0.3s;
   
 }
 
@@ -51,13 +53,80 @@ font-family: 'Montserrat', sans-serif;
 font-size: 18px;
 text-transform: uppercase;
 margin-right: 20px;
-border-bottom-style: solid;
-border-bottom-width: 1px;
-border-bottom-color: coral;
+transition: 0.3s;
+}
+
+.sidebar {
+  position:fixed;
+  left: 0;
+  width: 250px;
+  height: 100%;
+  Background-color: rgb(38, 38, 38, 0.8);
+}
+
+.sidebar header {
+  font-family: 'Raleway', sans-serif;
+  
+  font-size: 22px;
+  text-align: center;
+  line-height: 70px;
+  user-select: none;
+  Background-color: rgb(38, 38, 38);
+}
+
+.sidebar header .MENU {
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-bottom-color: white;
+  transition: 0.3s;
+  color: white;
+}
+
+.sidebar ul a {
+  display: block;
+  height: 100%;
+  width: 100%;
+  color: white;
+  line-height: 65px;
+  font-size: 18px;
+  font-family: 'Montserrat', sans-serif;
+  box-sizing: border-box;
+  transition: 0.3s;
+  float:left;
+  padding-left: 30px;
+}
+
+.sidebar header .MENU:hover {
+  border-bottom-color: coral;
+  color: coral;
+}
+
+.sidebar ul li:hover a {
+  padding-left: 25px;
+  color: coral;
+  
 }
 
 
-p {
+nav ul li:hover a {
+  color: coral;
+  padding-right: 10px;
+}
+
+nav label:hover {
+  color: coral;
+  
+}
+
+.footer .footer2 h3:hover {
+  color: coral;
+  padding-left: 0px;
+}
+
+
+
+
+.p p {
    width: 50ch;
    margin:auto;
   color: white;
@@ -67,26 +136,26 @@ p {
   margin-bottom: 150px;
   Background-color: rgb(38, 38, 38, 0.9);
   padding: 50px;
-  border-bottom-style: solid;
-  border-bottom-width: 1px;
-  border-bottom-color: coral;
   border-style: solid;
   border-width: 1px;
-  border-color: coral;
+  border-color: white;;
 }
 
 
 
 
-
-footer h3 {
+.footer .footer2 h3 {
   color:white;
   font-family: 'Montserrat', sans-serif;
   font-size: 30px;
   Background-color: rgb(38, 38, 38, 0.8);
   text-align: center;
-  padding: 30px;
+  padding:  30px;
   border-top-style: solid;
   border-top-width: 2px;
-  border-top-color: coral;
+  border-top-color: white;
+  width: 100%;
+  height: 100%;
+  margin-bottom:-20px;
+  transition: 0.3s;
 }
