--- a/Hemsidan om mig/Style.css
+++ b/Hemsidan om mig/Style.css
@@ -1,112 +1,112 @@
-*{
+* {
   padding: 0;
   margin: 0;
   text-decoration: none;
   list-style: none;
   box-sizing: border-box;
-  }
+}
 
 body {
-background-image: url(Bilder/Bakgrund3.jpg);
-background-size: cover;
+  background-image: url(Bilder/Bakgrund3.jpg);
+  background-size: cover;
+}
 
-
+.CHECKYCHICKEN {
+  background-image: url(Bilder/Chickychicken.jpg);
 }
 
 nav {
-Background-color: rgb(38, 38, 38);
-height: 80px;
-width: 100%;
-border-bottom-style: solid;
-border-bottom-width: 2px;
-border-bottom-color: white;
-
-
+  background-color: rgb(38, 38, 38);
+  height: 80px;
+  width: 100%;
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-bottom-color: white;
 }
 
 nav label {
-  font-family: 'Montserrat', sans-serif;
-  color:white;
-  font-size:34px;
+  font-family: "Montserrat", sans-serif;
+  color: white;
+  font-size: 34px;
   line-height: 80px;
   padding: 0 120px;
   letter-spacing: 5px;
   transition: 0.3s;
-  
 }
 
 nav ul {
-float: right;
-margin-right: 60px;
+  float: right;
+  margin-right: 60px;
 }
 
 nav ul li {
-display: inline-block;
-line-height: 80px;
-margin: 0 5px;
-
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
 }
 
 nav ul li a {
-color:white;
-font-family: 'Montserrat', sans-serif;
-font-size: 18px;
-text-transform: uppercase;
-margin-right: 20px;
-transition: 0.3s;
-}
-
-.sidebar {
-  position:fixed;
-  left: 0;
-  width: 250px;
-  height: 100%;
-  Background-color: rgb(38, 38, 38, 0.8);
-}
-
-.sidebar header {
-  font-family: 'Raleway', sans-serif;
-  
-  font-size: 22px;
-  text-align: center;
-  line-height: 70px;
-  user-select: none;
-  Background-color: rgb(38, 38, 38);
-}
-
-.sidebar header .MENU {
-  border-bottom-style: solid;
-  border-bottom-width: 1px;
-  border-bottom-color: white;
-  transition: 0.3s;
   color: white;
-}
-
-.sidebar ul a {
-  display: block;
-  height: 100%;
-  width: 100%;
-  color: white;
-  line-height: 65px;
+  font-family: "Montserrat", sans-serif;
   font-size: 18px;
-  font-family: 'Montserrat', sans-serif;
-  box-sizing: border-box;
+  text-transform: uppercase;
+  margin-right: 20px;
   transition: 0.3s;
-  float:left;
-  padding-left: 30px;
 }
 
-.sidebar header .MENU:hover {
-  border-bottom-color: coral;
-  color: coral;
+.pictures {
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  margin-top: 100px;
 }
 
-.sidebar ul li:hover a {
-  padding-left: 25px;
-  color: coral;
-  
+.pictures figure {
+  max-width: 250px;
+  max-height: 250px;
+  margin: auto;
 }
 
+.pictures figure img {
+  border: 2px solid white;
+  border-radius: 50%;
+  box-shadow: gray 0 0 10px;
+  width: 250px;
+  height: 250px;
+}
+
+.p p {
+  width: 50ch;
+  margin: auto;
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  font-size: 25px;
+  margin-top: 150px;
+  margin-bottom: 150px;
+  background-color: rgb(38, 38, 38, 0.9);
+  padding: 50px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: white;
+}
+
+.footer .footer2 h3 {
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  font-size: 30px;
+  background-color: rgb(38, 38, 38, 0.8);
+  text-align: center;
+  padding: 30px;
+  border-top-style: solid;
+  border-top-width: 2px;
+  border-top-color: white;
+  width: 100%;
+  height: 100%;
+  margin-bottom: -20px;
+  transition: 0.3s;
+}
 
 nav ul li:hover a {
   color: coral;
@@ -115,47 +115,9 @@ nav ul li:hover a {
 
 nav label:hover {
   color: coral;
-  
 }
 
 .footer .footer2 h3:hover {
   color: coral;
   padding-left: 0px;
-}
-
-
-
-
-.p p {
-   width: 50ch;
-   margin:auto;
-  color: white;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 25px;
-  margin-top: 150px;
-  margin-bottom: 150px;
-  Background-color: rgb(38, 38, 38, 0.9);
-  padding: 50px;
-  border-style: solid;
-  border-width: 1px;
-  border-color: white;;
-}
-
-
-
-
-.footer .footer2 h3 {
-  color:white;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 30px;
-  Background-color: rgb(38, 38, 38, 0.8);
-  text-align: center;
-  padding:  30px;
-  border-top-style: solid;
-  border-top-width: 2px;
-  border-top-color: white;
-  width: 100%;
-  height: 100%;
-  margin-bottom:-20px;
-  transition: 0.3s;
 }
