--- a/Hemsidan om mig/Style.css
+++ b/Hemsidan om mig/Style.css
@@ -15,7 +15,7 @@ body {
   background-image: url(Bilder/Chickychicken.jpg);
 }
 
-nav {
+.nav1 {
   background-color: rgb(38, 38, 38, 0.8);
   height: 80px;
   width: 100%;
@@ -24,7 +24,7 @@ nav {
   border-bottom-color: white;
 }
 
-nav label {
+.nav1 label {
   font-family: "Montserrat", sans-serif;
   color: white;
   font-size: 34px;
@@ -34,18 +34,18 @@ nav label {
   transition: 0.3s;
 }
 
-nav ul {
+.nav1 ul {
   float: right;
   margin-right: 60px;
 }
 
-nav ul li {
+.nav1 ul li {
   display: inline-block;
   line-height: 80px;
   margin: 0 5px;
 }
 
-nav ul li a {
+.nav1 ul li a {
   color: white;
   font-family: "Montserrat", sans-serif;
   font-size: 18px;
@@ -89,34 +89,79 @@ nav ul li a {
 }
 
 .p p {
-  width: 50ch;
-  margin: auto;
   color: white;
   font-family: "Montserrat", sans-serif;
-  font-size: 25px;
-  margin-top: 150px;
-  margin-bottom: 150px;
+  font-size: 17px;
+}
+
+.p h2 {
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  font-size: 22px;
+  text-align: center;
+  padding-bottom: 25px;
+}
+
+.p {
   background-color: rgb(38, 38, 38, 0.9);
-  padding: 50px;
   border-style: solid;
   border-width: 1px;
   border-color: white;
+  width: 110ch;
+  margin: auto;
+  margin-top: 150px;
+  margin-bottom: 150px;
+  padding: 30px;
 }
 
-.footer .footer2 h3 {
+.footer {
+  width: 100%;
+  overflow: hidden;
+  padding: 70px 0;
+  background-color: rgb(38, 38, 38, 0.9);
+}
+
+.inner_footer {
+  margin: 0 auto;
+  width: 1100px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.inner_footer .footer_third {
+  width: calc(21 - 20px);
+  margin-right: 10px;
+  float: left;
+  height: 100%;
+}
+
+.inner_footer .footer_third .kontaktuppgifter {
   color: white;
   font-family: "Montserrat", sans-serif;
-  font-size: 30px;
-  background-color: rgb(38, 38, 38);
-  text-align: center;
-  padding: 30px;
-  border-top-style: solid;
-  border-top-width: 2px;
-  border-top-color: white;
-  width: 100%;
-  height: 100%;
-  margin-bottom: -20px;
-  transition: 0.3s;
+  font-size: 22px;
+  padding-bottom: 20px;
+}
+
+.inner_footer .footer_third .telefonnummer {
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  padding-bottom: 20px;
+}
+
+.inner_footer .footer_third .gjordav {
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  font-size: 22px;
+  padding-bottom: 20px;
+}
+
+.inner_footer .footer_third .toppen {
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  padding-bottom: 20px;
 }
 
 nav ul li:hover a {
@@ -128,15 +173,15 @@ nav label:hover {
   color: coral;
 }
 
-.footer .footer2 h3:hover {
-  color: coral;
-  padding-left: 0px;
-}
-
 .pictures figure:hover {
   padding-top: 30px;
 }
 
 .pictures figure img:hover {
   border-color: coral;
+}
+
+.damedame {
+  color: palegreen;
+  font-size: 100px;
 }
